# numpy-rust

./: .gitignore  Cargo.toml  README.md  test_basic.py
.github/workflows/: ci.yml
crates/numpy-rust-core/: Cargo.toml
crates/numpy-rust-core/src/: array.rs  array_data.rs  broadcasting.rs  casting.rs  creation.rs  descriptor.rs  dtype.rs  error.rs  fft.rs  indexing.rs  kernel.rs  lib.rs  linalg.rs  manipulation.rs  random.rs  resolver.rs  storage.rs  struct_array.rs  utility.rs
crates/numpy-rust-core/src/ops/: arithmetic.rs  comparison.rs  correlation.rs  cumulative.rs  einsum.rs  logical.rs  math.rs  mod.rs  nan_reduction.rs  numerical.rs  polynomial.rs  reduction.rs  selection.rs  sorting.rs  statistics.rs  string_ops.rs
crates/numpy-rust-core/tests/: runtime_descriptor.rs  runtime_resolver.rs  runtime_storage.rs
crates/numpy-rust-python/: Cargo.toml
crates/numpy-rust-python/src/: lib.rs  py_array.rs  py_creation.rs  py_fft.rs  py_linalg.rs  py_random.rs  py_struct_array.rs
crates/numpy-rust-wasm/: Cargo.toml
crates/numpy-rust-wasm/src/: main.rs
docs/plans/: 2026-02-24-numpy-rust-design.md  2026-02-24-numpy-rust-implementation.md  2026-02-25-numpy-test-compat-design.md  2026-02-25-numpy-test-compat-implementation.md  2026-02-26-tier3-improvements-design.md  2026-02-26-tier3-improvements-implementation.md  2026-02-26-tier4-most-used-functions-design.md  2026-02-26-tier4-most-used-functions-implementation.md  2026-02-26-tier5-operator-gaps-design.md  2026-02-26-tier5-operator-gaps-implementation.md  2026-03-06-fix-16-xfails.md  (+7 more)
hooks/: install.sh  pre-commit  pre-push
(+165 files in other folders)
