[package]
name = "numpy-rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16", default-features = false }
num-complex = "0.4"
num-traits = "0.2"
thiserror = "2"

[features]
default = ["linalg", "fft", "random"]
linalg = ["dep:nalgebra"]
fft = ["dep:rustfft"]
random = ["dep:rand", "dep:rand_distr"]

[dependencies.nalgebra]
version = "0.33"
default-features = false
features = ["std"]
optional = true

[dependencies.rustfft]
version = "6.2"
optional = true

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.rand_distr]
version = "0.5"
optional = true
