[package]
name = "numpy-rust-python"
version = "0.1.0"
edition = "2021"

[features]
default = ["linalg", "fft", "random"]
linalg = ["numpy-rust-core/linalg"]
fft = ["numpy-rust-core/fft"]
random = ["numpy-rust-core/random"]

[dependencies]
numpy-rust-core = { path = "../numpy-rust-core", default-features = false }
num-complex = "0.4"
rustpython-vm = { workspace = true }
rustpython-derive = { workspace = true }
crossbeam-utils = "0.8.21"
once_cell = "1.21.3"
