[package]
name = "numpy-rust-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "numpy-python"
path = "src/main.rs"

[dependencies]
numpy-rust-python = { path = "../numpy-rust-python" }
rustpython = { workspace = true, features = ["freeze-stdlib", "threading", "host_env"] }
rustpython-vm = { workspace = true }
